# dpll_SATSolver

./: CMakeLists.txt  README.md
src/: Global.h  Sudoku_to_cnf.cpp  Sudoku_to_cnf.h  cnfparser.cpp  cnfparser.h  dpll.cpp  dpll.h  main.cpp
src/cnffile/: sudoku.cnf
src/resfile/: 1.res  11u.res  3.res  4u.res  sudoku.res
src/resfile/capability_test/: ais10.res  sud00009.res
src/resfile/function_test/: unsat-5cnf-30.res
